--- a/.github/workflows/make_and_publish_pkgs.yml
+++ b/.github/workflows/make_and_publish_pkgs.yml
@@ -36,7 +36,7 @@ jobs:
   make-packages:
     uses: AllStarLink/dahdi-linux/.github/workflows/ephemeral_ec2_run-this.yml@master
     with:
-      run-this: ./builder/dockerbuild.sh -a ${{ inputs.arch  }} -o ${{ inputs.os }} --ast-ver ${{ inputs.ast-ver }} --rpt-ver ${{ inputs.rpt-ver }} --asl3-ver ${{ inputs.asl3-ver}} --gh-rel ${{ inputs.gh-rel }} ${{ (inputs.commit-versioning == 'yes' || (inputs.commit-versioning == 'default' && inputs.deployment-environment == 'development')) && '-r' || null }}
+      run-this: ./builder/dockerbuild.sh -a ${{ inputs.arch  }} -o ${{ inputs.os }} --gh-rel ${{ inputs.gh-rel }}
       arch: ${{ inputs.arch == 'armhf' && 'arm64' || inputs.arch == 'aarch64' && 'arm64' || inputs.arch == 'amd64' && 'x86_64' || inputs.arch == 'riscv64' && 'x86_64' || inputs.arch }}
       artifact-path: '_debs/*'
     secrets: inherit
