--- a/.github/workflows/make_and_publish_pkgs.yml
+++ b/.github/workflows/make_and_publish_pkgs.yml
@@ -25,14 +25,14 @@ on:
           - amd64
 jobs:
   make-packages:
-    uses: AllStarLink/dahdi-linux/.github/workflows/ephemeral_ec2_run-this.yml@develop
+    uses: AllStarLink/dahdi-linux/.github/workflows/ephemeral_ec2_run-this.yml@master
     with:
       run-this: ./builder/dockerbuild.sh -a ${{ inputs.arch	}} -o ${{ inputs.os }} --gh-rel ${{ inputs.gh-rel }}
       arch: ${{ inputs.arch == 'armhf' && 'arm64' || inputs.arch == 'aarch64' && 'arm64' || inputs.arch == 'amd64' && 'x86_64' || inputs.arch == 'riscv64' && 'x86_64' || inputs.arch }}
       artifact-path: '/actions-runner/_work/dahdi-linux/_debs/'
     secrets: inherit
   publish-packages:
-    uses: AllStarLink/dahdi-linux/.github/workflows/publish_artifacts_to_aptly.yml@develop
+    uses: AllStarLink/dahdi-linux/.github/workflows/publish_artifacts_to_aptly.yml@master
     with:
       repo-name: asl3-${{ inputs.aptly-repo }}
     secrets: inherit
