--- a/.github/workflows/make_and_publish_pkgs.yml
+++ b/.github/workflows/make_and_publish_pkgs.yml
@@ -23,17 +23,17 @@ on:
         type: choice
         options:
           - amd64
+
+env:
+  APTLY_API_USER: ${{secrets.APTLY_API_USER}}
+  APTLY_API_PASS: ${{secrets.APTLY_API_PASS}}
+  APTLY_GPG_PASSPHRASE: ${{secrets.APTLY_GPG_PASSPHRASE}}
+
 jobs:
   make-packages:
-    uses: AllStarLink/dahdi-linux/.github/workflows/ephemeral_ec2_run-this.yml@master
+    uses: AllStarLink/asl3-workflows/.github/workflows/ephemeral_ec2_run-this.yml@develop
     with:
-      run-this: ./builder/dockerbuild.sh -a ${{ inputs.arch	}} -o ${{ inputs.os }} --gh-rel ${{ inputs.gh-rel }}
+      run-this: ./builder/dockerbuild.sh -a ${{ inputs.arch	}} -o ${{ inputs.os }} --gh-rel ${{ inputs.gh-rel }} -r ${{ inputs.aptly-repo }} 
       arch: ${{ inputs.arch == 'armhf' && 'arm64' || inputs.arch == 'aarch64' && 'arm64' || inputs.arch == 'amd64' && 'x86_64' || inputs.arch == 'riscv64' && 'x86_64' || inputs.arch }}
       artifact-path: '/actions-runner/_work/dahdi-linux/_debs/'
     secrets: inherit
-  publish-packages:
-    uses: AllStarLink/dahdi-linux/.github/workflows/publish_artifacts_to_aptly.yml@master
-    with:
-      repo-name: asl3-${{ inputs.aptly-repo }}
-    secrets: inherit
-    needs: make-packages
