--- a/builder/Dockerfile
+++ b/builder/Dockerfile
@@ -14,13 +14,13 @@ RUN adduser --disabled-password --gecos '' --uid $USER_ID --gid $GROUP_ID user; 
 
 # Install build dependencies
 RUN DEBIAN_FRONTEND=noninteractive apt-get update && apt-get -y install \
-	apt-utils build-essential devscripts fakeroot debhelper git \
+	apt-utils build-essential devscripts fakeroot debhelper git lsb_release \
+	libdistro-info-perl libterm-readline-gnu-perl  libterm-readline-perl-perl \
     gh ca-certificates wget --no-install-recommends
 
 # Install build dependencies
 RUN DEBIAN_FRONTEND=noninteractive apt-get -y install \
 	bzip2 asciidoc-base dh-dkms module-assistant tar debhelper wget \
-	libdistro-info-perl libterm-readline-gnu-perl  libterm-readline-perl-perl \
     --no-install-recommends
 
 # Import entrypoint script
