--- a/debian/control
+++ b/debian/control
@@ -6,19 +6,19 @@ Uploaders: Jason McCormick <n8ei@allstarlink.org>
 Build-Depends: debhelper-compat (= 12), bzip2, asciidoc-base | asciidoc,
  wget,
  dh-dkms,
- module-assistant,
  tar (>= 1.28)
 Standards-Version: 4.3.0
-Homepage: http://www.asterisk.org/
-Vcs-Git: https://salsa.debian.org/pkg-voip-team/dahdi-linux.git
-Vcs-Browser: https://salsa.debian.org/pkg-voip-team/dahdi-linux
+Homepage: https://github.com/AllstarLink/dahdi-linux
+Vcs-Git: https://github.com/AllstarLink/dahdi-linux
+Vcs-Browser: https://github.com/AllstarLink/dahdi-linux
 Rules-Requires-Root: no
 Testsuite: autopkgtest-pkg-dkms
 
 Package: dahdi-linux
 Architecture: all
 Multi-Arch: foreign
-Depends: ${misc:Depends}, procps, fxload, dahdi-dkms (= ${binary:Version})
+Depends: ${misc:Depends}, procps, fxload, 
+  dahdi-dkms (= ${binary:Version}), dahdi-source (= ${binary:Version})
 Description: DAHDI telephony interface - Linux userspace parts
  DAHDI (formerly Zaptel) is an interface for telephony devices used by e.g.
  the Asterisk PBX software. The dahdi-* packages provide the kernel
@@ -31,8 +31,8 @@ Package: dahdi-source
 Multi-Arch: foreign
 Section: kernel
 Architecture: all
-Depends: ${misc:Depends}, debhelper (>> 4.0), module-assistant (>= 0.8.1), bzip2
-Recommends: dahdi-linux (= ${binary:Version})
+Depends: ${misc:Depends}, debhelper (>> 4.0), bzip2,
+  dahdi-linux (= ${binary:Version}), dahdi-dkms (= ${binary:Version})
 Description: DAHDI telephony interface - source code for kernel driver
  DAHDI (formerly Zaptel) is an interface for telephony devices used by e.g.
  the Asterisk PBX software. The dahdi-* packages provide the kernel
@@ -44,11 +44,9 @@ Description: DAHDI telephony interface - source code for kernel driver
 Package: dahdi-dkms
 Section: kernel
 Architecture: all
-Depends: ${misc:Depends}, dkms (>= 2.8.4-3~), make, libc6-dev, dpkg-dev, gcc, gawk,
-  linux-headers-generic
-Recommends: dahdi-linux (= ${binary:Version})
-Conflicts: dahdi-source (< ${binary:Version})
-Replaces: dahdi-source (< ${binary:Version})
+Depends: ${misc:Depends}, dkms (>= 2.8.4-3~), make, libc6-dev, dpkg-dev, gcc,
+  gawk, linux-headers-generic, dahdi-source (= ${binary:Version}),
+  dahdi-linux (= ${binary:Version})
 Description: DAHDI telephony interface (dkms kernel driver)
  DAHDI (formerly Zaptel) is an interface for telephony devices used by e.g.
  the Asterisk PBX software. The dahdi-* packages provide the kernel
